
Clones:
AC/DC 1.70.0,1.70.0LE
Baby Pac-Man (Vidiot U9 ROM Update 891-16 per Service-Bulletin dated July 11 1983)
Batman 1.03 (French)
Black Jack (Saucer points modification)
Bow & Arrow (Prototype rev. 22)
Earthshaker PA-4
Embryon v92 (7-digit conversion and more)
Frontier (Gate Fix)
Galaxy (Planet Skillshot)
Game Show LU-3 (Europe),LG-6 (German)
High Speed L-4C (competition MOD)
Meteor (No Background Sound)
Pool Sharks LA-7C (competition MOD)
Spider-Man 2.62 (bootleg with replaced music)
Star Trek (Stern) 1.62,1.62LE



Version 3.0 (December 24th, 2017) - "11 years in the making"
------------------------------------------------------------------------------
*** GENERAL ***
Extend and update some parts of the .txt documentation files

*** CORE/CPU ***
Add support for the Stern S.A.M. platform (e.g. Stern releases from 2006-2014), special thanks for improvements to the community, notably to Arngrim, CarnyPriest and especially DJRobX
Correct SP0256 speech for IDSA games (needs additional sp0256-al2.bin file to work (for Basketball and V-1, only the latter features speech though))
Fix reset / NMI handling for IDSA V-1
Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
Fix Rescue 911 (and maybe more: SFII, WCS, Shaq, mZOIS?) DMD brightness level mapping regression
Improve Punky Willy sound emulation
Fix sound for Taito Sure Shot (sounds awful, but like the real thing :)) and Mr. Black (Z-80 version still misses sound rom dumps though) (NMI line needs to be pulsed for these games)
Make speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
Fix COP420 emulation, sound works now on Zira
Add emulation pause support for alternate sound

*** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren, barakandl, inkochnito
New:
MAC: MAC Jungle
Stern: S.A.M. System Flash Boot 1.02,1.06,2.10,2.3,3.1