@@ -2317,6 +2317,7 @@ DRIVER(taxi,l4)         //          08/88 W Taxi (Lola)
 DRIVER(taxi,l5cm)       //          04/16 W Taxi (Marilyn L-5C)
 DRIVER(taxi,l5c)        //          04/16 W Taxi (Lola L-5C)
 DRIVER(jokrz,l3)        //S11-567:  12/88 W Jokerz! (L-3)
+DRIVER(jokrz,lg4)       //          12/88 W Jokerz! (LG-4 German)
 DRIVER(jokrz,l6)        //          12/88 W Jokerz! (L-6)
 DRIVER(esha,pa1)        //S11-568:  02/89 W Earthshaker PA-1
 DRIVER(esha,pa4)        //          02/89 W Earthshaker PA-4
