@@ -37,6 +37,7 @@ Frontier (Gate Fix)
 Galaxy (Planet Skillshot)
 Game Show LU-3 (Europe),LG-6 (German)
 High Speed L-4C (competition MOD)
+Jokerz! LG-4 (German)
 Meteor (No Background Sound)
 Pool Sharks LA-7C (competition MOD)
 Spider-Man 2.62 (bootleg with replaced music)
